feat: add endpoint to get g1 and g2 pubkeys (#8)
* feat: add endpoint to get g1 and g2 pubkeys

* break existing api for returning

* break signer api too

* update api

* add getkeymetadata endpoint

* update comment
